src/test/ui/issues/issue-45829/rename-with-path.rs
use std::{collections::HashMap as A, sync::Arc as A};
//~^ ERROR is defined multiple times

fn main() {}
